# runtime.golf

./: .gitignore  LICENSE.md  Makefile  README.md
app/: Cargo.toml
app/migrations/: 1_init.sql
app/src/: main.rs
app/src/api/: docs.rs  mod.rs  oauth.rs
app/src/db/: auth.rs  user.rs
app/src/pages/: about.rs  hole.rs  home.rs  mod.rs  sitemap.rs  user.rs
app/src/tools/: github.rs  holes.rs  jwt.rs  mod.rs  templates.rs
content/: package-lock.json  package.json  tsconfig.json
content/css/: components.sass  editor.sass  font.sass  root.sass  theme.sass  user.sass
content/js/: hole.ts  languages.ts  navbar.ts  test.ts  theme.ts  user.ts
content/js/components/: editor.ts  selector.ts
holes/: pi.toml  runner  runner.rs
holes/fibonnaci/: hole.toml
holes/pi/: hole.toml
holes/tutorial/: hole.toml
jobs/: Cargo.toml
jobs/src/api/: info.rs  mod.rs  run.rs
jobs/src/runtime/: format.rs
langs/c/: Dockerfile
langs/cpp/: Dockerfile
langs/knight/: Dockerfile
langs/python/: Dockerfile
public/: robots.txt
server/conf/: mime.types  nginx.conf
server/lua/: ratelimit.lua
templates/: about.hbs  hole.hbs  index.hbs  leaderboards.hbs  user.hbs
templates/components/: meta.hbs  navbar.hbs
