[package]
name = "runtime_golf"
version = "1.0.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
handlebars = "6.3.2"
tokio = { version = "1.0", features = ["rt-multi-thread", "net", "fs"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite" ] }
serde = { version = "1.0", features = ["derive"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
reqwest = { version = "0.12", features = ["json"] }
jsonwebtoken = "9.3"
base64 = "0.22"
dotenvy = "0.15"
urlencoding = "2.1"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
chrono = "0.4.41"
serde_json = "1.0.140"
uuid = { version = "1.17.0", features = ["v4"] }
toml = "0.9.5"
